--- a/Untitled1_ipyn.ipynb
+++ b/Untitled1_ipyn.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1WntKxX5gWHGJoFsn_49cXSMO4xCVMrEa",
-      "authorship_tag": "ABX9TyNoCkDssgTSExQMJtciVAtV",
+      "authorship_tag": "ABX9TyMfQpXFbu3/wHBPd2Fj1fNs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ajinkyajumde/Global-Terrorism-Analysis/blob/main/Untitled1_ipyn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## <b> The Global Terrorism Database (GTD) is an open-source database including information on terrorist attacks around the world from 1970 through 2017. The GTD includes systematic data on domestic as well as international terrorist incidents that have occurred during this time period and now includes more than 180,000 attacks. The database is maintained by researchers at the National Consortium for the Study of Terrorism and Responses to Terrorism (START), headquartered at the University of Maryland.</b>\n",
+        "\n",
+        "# <b> Explore and analyze the data to discover key findings pertaining to terrorist activities. </b>"
+      ],
+      "metadata": {
+        "id": "5MAvokNqS9VR"
+      }
     },
     {
       "cell_type": "code",
